# archiver

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  setup.py
.github/workflows/: job.yml
iagitup/: iagitup.py
repositories/: list.txt
